syntax = "proto3";
option  java_package="org.sid.stubs";
// Définition du message pour le dépassement de vitesse

message RadarRequest {
  string radarId = 1;
  double maxSpeed = 2;
  string vehiculeId = 3;
}



message Infraction{
  string id = 1;
  string date = 2;
  double vehicleSpeed = 3;
  double radarMaxSpeed = 4;
  double fineAmount = 5;
  string radarId = 6;
  string vehicleId = 7;
  Vehicle vehicle = 8;
  Radar radar = 9;
}

message Vehicle{
  string id = 1;
  string regNumber = 2;
  string brand = 3;
  double fiscalPower = 4;
  string model = 5;
  Owner owner = 6;
}

message Radar{
  string id = 1;
  double maxSpeed = 2;
  double longitude = 3;
  double latitude = 4;
}

message Owner{
  int64 id = 1;
  string name = 2;
  string birthDate = 3;
  string email = 4;
}
// Définition du service Radar-Service

service RadarService {
  rpc processRadar(RadarRequest) returns (Infraction);
}
